# -border-

./: .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  push_blockchain.sh  pyproject.toml  requirements.txt  setup.py  update.sh
.github/workflows/: ci.yml
border/: __init__.py  cli.py  dashboard.py  discovery.py  explorer.py  faucet.py  ledger.py  node.py  node_runner.py  obfuscate.py  relay.py
border/blockchain/: __init__.py  block.py  chain.py  economics.py  mnemonic.py  node.py  script.py  store.py  transaction.py  wallet.py
border/compute/: __init__.py  daemon.py  job.py  market.py  node.py
border/dao/: __init__.py  governance.py  node.py  proposal.py  treasury.py  vote.py
border/dns/: __init__.py  node.py  record.py  registry.py  resolver.py
border/examples/: compute_demo.py
border/identity/: __init__.py  claim.py
border/infer/: __init__.py  daemon.py  market.py  node.py
border/p2p/: __init__.py  discovery.py  gossip.py  node.py  peer.py  server.py  sync.py
border/payments/: __init__.py  channel.py  manager.py  receipt.py
border/render/: __init__.py  job.py  market.py  node.py
border/storage/: __init__.py  chunk.py  client.py  node.py  proof.py
border/testnet/: __init__.py  config.py
examples/: blockchain_demo.py  cli_demo.py  compute_demo.py  dao_demo.py  demo.py  dns_demo.py  economic_simulation.py  economics_demo.py  identity_demo.py  infer_render_demo.py  node_runner_demo.py  p2p_demo.py  relay_demo.py  run_relay.py  storage_demo.py  testnet_demo.py
phantom/: __init__.py  client.py  ledger.py  lora.py  node.py  obfuscate.py
phantom/blockchain/: __init__.py  block.py  chain.py  transaction.py  wallet.py
phantom/compute/: __init__.py  daemon.py  node.py  worker.py
phantom/identity/: __init__.py  did.py  node.py  registry.py  reputation.py
phantom/infer/: __init__.py  daemon.py  job.py  model.py
phantom/render/: __init__.py  daemon.py
phantom/storage/: __init__.py  chunk.py  client.py  node.py
spec/: PHANTOM-v0.1.md  border_whitepaper.md
testnet/: Dockerfile  config.py  docker-compose.yml  genesis.json  run_local_testnet.sh  seeds.txt
tests/: conftest.py  test_blockchain.py  test_compute.py  test_dao.py  test_dns.py  test_economics.py  test_faucet.py  test_identity.py  test_lora.py  test_mnemonic.py  test_p2p.py  test_payments.py  test_relay.py  test_script.py  test_staking.py  test_storage.py  test_store.py  test_wallet.py
