[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "border-net"
version = "0.2.0"
description = "Border — Decentralised relay, compute, storage and identity. Powered by BorderCoin."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["privacy", "censorship", "internet-freedom", "blockchain", "gpu", "crypto", "bandwidth", "decentralised"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "ecdsa>=0.19.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/wookiespoo/-border-"

[tool.setuptools.packages.find]
where = ["."]
include = ["border*"]
