[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "border-net"
version = "0.3.0"
description = "Border — decentralised relay, compute, storage, DNS and identity network powered by BorderCoin."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["privacy", "censorship", "blockchain", "p2p", "bandwidth", "decentralised", "crypto"]

dependencies = [
    # Web frameworks
    "flask>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # HTTP clients
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # Cryptography
    "cryptography>=42.0.0",
    # Data validation (FastAPI subsystems)
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.5.0",
]
lora = [
    "pyserial>=3.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
border-node = "border.node_runner:main"
border      = "border.cli:main"

[project.urls]
Homepage   = "https://github.com/wookiespoo/-border-"
Repository = "https://github.com/wookiespoo/-border-"

[tool.setuptools.packages.find]
where   = ["."]
include = ["border*", "testnet*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.sh", "Dockerfile", "docker-compose.yml"]
